apps/kanidm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
spec:
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: kanidm
