apps/kanidm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanidm
  namespace: kanidm
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - auth.m15ty.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: kanidm
          port: 8443
